<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="mainViewModel"
            type="org.irdest.irdestVPN.ui.MainViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/header_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:layout_marginBottom="23dp"
            android:textAlignment="center"
            android:textSize="22sp"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/color_state_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="19sp"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/dashboard_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:scrollbars="vertical"
            android:textAlignment="center"
            android:textSize="18sp"
            android:text="" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/input_wrapper_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="13dp"
            android:orientation="vertical"
            android:background="@drawable/stroke_round_corner">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/server_addr_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/stroke_round_corner"
                    android:hint="@string/server_address"
                    android:digits="0123456789.:"
                    android:maxLength="39"
                    android:maxLines="1"
                    android:text="@={mainViewModel.serverAddress}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/server_port_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/stroke_round_corner"
                    android:hint="@string/port_number"
                    android:inputType="numberDecimal"
                    android:maxLength="5"
                    android:maxLines="1"
                    android:text="@={mainViewModel.serverPort}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginBottom="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/shared_secret_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/stroke_round_corner"
                    android:hint="@string/secret"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:text="@={mainViewModel.sharedSecret}" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_wrapper_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/connect_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> mainViewModel.onConnectBtnClick()}"
                android:text="@string/connect" />

            <Button
                android:id="@+id/disconnect_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> mainViewModel.onDisconnectBtnClick()}"
                android:text="@string/disconnect" />
        </LinearLayout>

    </LinearLayout>
</layout>
